# sentinel

./: .gitignore  .vercelignore  README.md  instructions.md  next.config.mjs  pyproject.toml  tracked_files.txt
api/: index.py  requirements.txt
app/: layout.tsx
app/(shell)/anomalies/: page.tsx
components/: LiveClock.tsx  Skeleton.tsx
dashboard/app/(shell)/dashboard/: page.tsx
dashboard/components/: StatCounter.tsx
data/: anomaly_results.csv  anomaly_summary.json  feeder_readings_sample.csv  forecast_metrics.csv  forecast_next24h.csv  forecast_results_sample.csv  meter_metadata.csv  meter_readings_sample.csv
lib/: api.ts
models/anomaly/: isolation_forest.py
notebooks/: eda_and_evaluation.ipynb
sentinel/: requirements.txt
sentinel/api/: main.py
sentinel/dashboard/: package-lock.json  package.json  tailwind.config.ts
sentinel/dashboard/app/: globals.css
sentinel/dashboard/app/(shell)/forecasting/: page.tsx
sentinel/dashboard/app/(shell)/reports/: page.tsx
sentinel/dashboard/components/: AppShell.tsx  ErrorCard.tsx  ZoneMap.tsx
sentinel/data/: generate_synthetic.py  generation_cohorts.json
sentinel/models/forecasting/: xgboost_demand.py
sentinel/models/forecasting/saved_models/: feeder_capacity.json
