[project]
name = "sentinel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "python-multipart>=0.0.9",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "seaborn>=0.13.0",
    "shap>=0.45.0",
    "uvicorn>=0.30.0",
    "xgboost>=2.1.0",
]
